Bugfix and image optimization

--- a/uat/project.html
+++ b/uat/project.html
@@ -70,28 +70,17 @@
             <div class="col-md-8 col-md-offset-2 text-center">
               <div class="display-t">
                 <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                  <h1>Our Projects</h1>
-                  <h2>MINA by<a href="#" target="_blank">&nbsp;MINA</a></h2>
+                  <h1>Our Projects & Events</h1>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </header>
-      <div class="fh5co-counters" id="fh5co-counter">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="18" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Projects</span></div>
-            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="468" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Events</span></div>
-            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="75" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Members</span></div>
-          </div>
-        </div>
-      </div>
       <div class="fh5co-bg-section" id="fh5co-explore">
         <div class="container">
           <div class="row animate-box">
             <div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-              <h2>Our Projects</h2>
               <p>“Muslim Information Network of Australasia (MINA)” completed 10 years of successfully serving the society inhibiting Australian and Islamic values benefitting the people of this wonderful land. </p>
             </div>
           </div>
@@ -145,7 +134,7 @@
             </div>
             <div class="col-lg-4 col-md-4">
               <div>
-                <h4>Forest Camping</h4>
+                <h4>Outdoor Camping</h4>
                 <p>Camping with families to spend some relax and enjoying time with nature and build strong friend other members and respect for the Australian Natural Life</p>
               </div>
             </div>
@@ -170,6 +159,11 @@
               </div>
             </div>
           </div>
+          <div class="container subSections">
+            <div class="row animate-box">
+              <h4>Much much more...</h4>
+            </div>
+          </div>
       </div>
       <footer id="fh5co-footer" role="contentinfo">
         <div class="container">
@@ -187,7 +181,7 @@
                 </ul>
               </div>
               <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-4">
-                <h4>Engage us</h4>
+                <h4>Enage with us</h4>
                 <ul class="fh5co-footer-links">
                   <li>Community BBQ</li>
                   <li>EID Lunches</li>
@@ -198,8 +192,7 @@
           </div>
           <div class="row copyright">
             <div class="col-md-12 text-center">
-              <p class="block">&copy; 2016 MINA. All Rights Reserved.</p>
-              <p class="block">Designed by<a href="http://fareezahmed.com/" target="_blank">&nbspFareez Ahmed</a></p>
+              <p class="block">&copy; 2018 MINA. All Rights Reserved.</p>
               <div>
                 <ul class="fh5co-social-icons">
                   <li><a href="https://www.facebook.com/minamelb"><i class="icon-facebook"></i></a></li>
