--- a/uat/contact.html
+++ b/uat/contact.html
@@ -85,40 +85,12 @@
               <div class="fh5co-contact-info">
                 <h3>Contact Information</h3>
                 <ul>
-                  <li class="address">198 West 21th Street, Suite 721 New York NY 10016</li>
-                  <li class="email">info@mina.org</li>
+                  <li class="address">D3, 1-13 The Gateway, Broadmeadows, VIC 3047</li>
+                  <li class="email"><a href="mailto:minamelbourne@gmail.com">minamelbourne@gmail.com</a></li>
                 </ul>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25253.065181047925!2d144.95184875531962!3d-37.70481374905496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad645326f4c077d%3A0x5045675218cd1f0!2sFawkner+VIC+3060!5e0!3m2!1sen!2sau!4v1482698510139" width="80%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6314.567704660656!2d144.94992359907127!3d-37.68953226552119!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65ab051752ed9%3A0x318070da57cd0f8c!2sD3%2F1-13+The+Gateway%2C+Broadmeadows+VIC+3047!5e0!3m2!1sen!2sau!4v1527125036601" width="80%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
             </div>
-            <!-- <div class="col-md-6 animate-box">
-              <h3>Get In Touch</h3>
-              <form action="#">
-                <div class="row form-group">
-                  <div class="col-md-12">
-                    <input class="form-control" type="text" id="fullName" placeholder="Your Full Name">
-                  </div>
-                </div>
-                <div class="row form-group">
-                  <div class="col-md-12">
-                    <input class="form-control" type="text" id="email" placeholder="Your email address">
-                  </div>
-                </div>
-                <div class="row form-group">
-                  <div class="col-md-12">
-                    <input class="form-control" type="text" id="subject" placeholder="Your subject of this message">
-                  </div>
-                </div>
-                <div class="row form-group">
-                  <div class="col-md-12">
-                    <textarea class="form-control" name="message" id="message" cols="30" rows="10" placeholder="Say something about us"></textarea>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <input class="btn btn-primary" type="submit" value="Send Message">
-                </div>
-              </form>
-            </div> -->
           </div>
         </div>
       </div>
@@ -138,7 +110,7 @@
               </ul>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-4">
-              <h4>Engage us</h4>
+              <h4>Enage with us</h4>
               <ul class="fh5co-footer-links">
                 <li>Community BBQ</li>
                 <li>EID Lunches</li>
@@ -149,8 +121,7 @@
           </div>
           <div class="row copyright">
             <div class="col-md-12 text-center">
-              <p class="block">&copy; 2016 MINA. All Rights Reserved.</p>
-              <p class="block">Designed by<a href="http://fareezahmed.com/" target="_blank">&nbspFareez Ahmed</a></p>
+              <p class="block">&copy; 2018 MINA. All Rights Reserved.</p>
               <div>
                 <ul class="fh5co-social-icons">
                   <li><a href="https://www.facebook.com/minamelb"><i class="icon-facebook"></i></a></li>
