--- a/uat/photo.html
+++ b/uat/photo.html
@@ -78,23 +78,14 @@
           </div>
         </div>
       </header>
-      <div class="fh5co-counters" id="fh5co-counter">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="18" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Projects</span></div>
-            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="468" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Events</span></div>
-            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="75" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Members</span></div>
-          </div>
-        </div>
-      </div>
       <!-- About Page-->
       <!-- About Section-->
       <div class="fh5co-project">
         <div class="container">
           <div class="row animate-box">
             <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-              <h2>Photo Gallary</h2>
-              <p>Some Amazing Moments</p>
+              <p></p>
+              <h2>Some Amazing Moments</h2>
             </div>
           </div>
         </div>
@@ -220,7 +211,7 @@
               </ul>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-4">
-              <h4>Engage us</h4>
+              <h4>Enage with us</h4>
               <ul class="fh5co-footer-links">
                 <li>Community BBQ</li>
                 <li>EID Lunches</li>
@@ -231,7 +222,7 @@
           </div>
           <div class="row copyright">
             <div class="col-md-12 text-center">
-              <p class="block">&copy; 2016 MINA. All Rights Reserved.</p>
+              <p class="block">&copy; 2018 MINA. All Rights Reserved.</p>
               <p class="block">Designed by<a href="http://fareezahmed.com/" target="_blank">&nbspFareez Ahmed</a></p>
               <div>
                 <ul class="fh5co-social-icons">
