--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
           <div class="row animate-box">
             <div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
               <h2>About Us</h2>
-              <p>MINA is a not for profit organisation managed by committee of management overseeing the activities and ensure it leads to the vision and objectives outlined.</p>
-              
+              <p>MINA is a not for profit organisation managed by a committee of members overseeing its activities to ensure that they are aligned with the organisations vision and objectives.</p>
             </div>
           </div>
         </div>
@@ -102,7 +101,7 @@
               <div class="col-md-4 animate-box">
                 <div class="mt">
                   <div>
-                      <p>This association comprises group of like-minded families of Islamic faith from diverse demographic background across Indian subcontinent who come together to bring some amazing events and project to support the Muslim Community in Australia and also engage and works with Australia community to build better tomorrow. </p>
+                      <p>MINA is comprised of like-minded families of the Islamic faith from diverse demographic backgrounds in Melbourne. Originally belonging to the Indian subcontinent, these families have come together to organise various events and projects to not only strengthen the Muslim Community in Australia but also to engage and collaborate with wider Australian community to build a more prosperous tomorrow for all. </p>
                   </div>
                 </div>
               </div>
@@ -224,7 +223,7 @@
           <div class="row row-pb-md">
             <div class="col-md-3 fh5co-widget">
               <h4>MINA</h4>
-              <p>Our Vision is to facilitate and empower Muslim community to utilise their full potential by contributing profusely to the Australian society</p>
+              <p>Our Vision is to facilitate and empower the Muslim community to utilise their full potential leading to positive contribution to the wider Australian community.</p>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-4">
               <h4>Learn &amp; Grow</h4>
