--- a/photo.html
+++ b/photo.html
@@ -70,7 +70,7 @@
             <div class="col-md-8 col-md-offset-2 text-center">
               <div class="display-t">
                 <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                  <h1>Photo Gallary</h1>
+                  <h1>Photo Gallery</h1>
                   <h2>MINA</h2>
                 </div>
               </div>
