--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="container">
           <div class="row animate-box">
             <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-              <h2>Photo Gallary</h2>
+              <h2>Photo Gallery</h2>
               <p>Some of our amazing moments</p>
             </div>
           </div>
