updated version of MINA

--- a/project.html
+++ b/project.html
@@ -57,6 +57,7 @@
                   <li class="active"><a href="project.html">Projects & Events</a></li>
                   <li><a href="photo.html">Photo Gallery</a></li>
                   <li><a href="contact.html">Contact</a></li>
+                  <li><a href="quran.html">Free Quran</a></li>
                 </ul>
               </div>
             </div>
