--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,7 @@
                   <li><a href="project.html">Projects & Events</a></li>
                   <li><a href="photo.html">Photo Gallery</a></li>
                   <li class="active"><a href="contact.html">Contact</a></li>
+                  <li><a href="quran.html">Free Quran</a></li>
                 </ul>
               </div>
             </div>
