--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                   <!-- <li><a href="event.html">Events</a></li> -->
                   <li><a href="photo.html">Photo Gallery</a></li>
                   <li><a href="contact.html">Contact</a></li>
+                  <li><a href="quran.html">Free Quran</a></li>
                 </ul>
               </div>
             </div>
