Fixed Spelling Error and Address validation

--- a/quran.html
+++ b/quran.html
@@ -108,7 +108,7 @@
                   </div>
 
                   <div class="input-box">
-                    <input type="text" name="suburb" id="locality" placeholder="Subrub" required="">
+                    <input type="text" name="suburb" id="locality" placeholder="Suburb" required="">
                   </div>
                     
 
@@ -153,7 +153,6 @@
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/magnific-popup-options.js"></script>
     <script src="js/main.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgtWQoPiWX3fq-Gf4bHjab1V83QP3f9yM&libraries=places"></script>
     <script src="js/address.js"></script>
     <script> 
       document.getElementById("manual_address").addEventListener("click", function(){ 
